2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amcheck.pm: Fix unshift.
	* perl/Amanda/Rest/Configs.pm: Fix severity.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fix small bug found by coverity.
	* common-src/ammessage.c: typo.
	* server-src/amcheck.c: typo, remove unused variable.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c : Print severity as name.
	* perl/Amanda/Message.pm: severity constant are name.
	* installcheck/Amanda_Rest_Amcheck.pl,
	   installcheck/Amanda_Rest_Changers.pl,
	   installcheck/Amanda_Rest_Configs.pl,
	   installcheck/Amanda_Rest_Dles.pl,
	   installcheck/Amanda_Rest_Dumps.pl,
	   installcheck/Amanda_Rest_Labels.pl,
	   installcheck/Amanda_Rest_Runs.pl,
	   installcheck/Amanda_Rest_Storages.pl,
	   installcheck/Amanda_Rest_Storages_Labels.pl,
	   installcheck/Amanda_Rest_Version.pl: Use symbol for the severity.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.h: Change severity values.
	* perl/Amanda/Message.pm: Change severity values.
	* perl/Amanda/Changer.pm, perl/Amanda/Changer/disk.pm,
	* perl/Amanda/Changer/diskflat.pm, perl/Amanda/Changer/multi.pm,
	  perl/Amanda/Changer/robot.pm, perl/Amanda/Curinfo.pm,
	  perl/Amanda/Curinfo/Info.pm, perl/Amanda/Label.pm,
	  perl/Amanda/Recovery/Scan.pm, perl/Amanda/Rest/Amcheck.pm,
	  perl/Amanda/Rest/Changers.pm, perl/Amanda/Rest/Configs.pm,
	  perl/Amanda/Rest/Dles.pm, perl/Amanda/Rest/Dumps.pm,
	  perl/Amanda/Rest/Labels.pm, perl/Amanda/Rest/Report.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Rest/Services.pm,
	  perl/Amanda/Rest/Storages.pm, perl/Amanda/Rest/Storages/Labels.pm,
	  perl/Amanda/Rest/Version.pm, perl/Amanda/Status.pm,
	  perl/Amanda/Storage.pm, perl/Amanda/Tapelist.swg,
	  perl/Amanda/Vault.pm, server-src/amcheck.c: Set severity.
	* installcheck/Amanda_Rest_Amcheck.pl,
	  installcheck/Amanda_Rest_Changers.pl,