@@ -1,4 +1,7 @@
 2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Fix type casting.
+
+2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Rest/Amcheck.pm: Fix unshift.
 	* perl/Amanda/Rest/Configs.pm: Fix severity.
 
